Fixed missing image for suppliers and white space on cart page

--- a/src/components/main-hero/index.css
+++ b/src/components/main-hero/index.css
@@ -74,7 +74,7 @@ img {
 }
 
 #first-hero-div {
-    margin-top: 30px;
+    margin-top: 25px;
 }
 
 .Second-Hero-div {
