--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 
 html, body, #root {
-    background-color: white;
+    background-color: #212121;
     height: 100%;
     margin: 0;
     padding: 0;
